--- a/style.css
+++ b/style.css
@@ -2,8 +2,13 @@
     box-sizing: border-box;
 }
 
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
 body {
-    margin: 0;
     background-color: #313137;
     color: white;
 }
